--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -82,11 +82,11 @@
               <td>{{ bill.status }}</td>
               <td class="text-center">
                 <div class="btn-group">
-                  <button class="btn btn-info">
-                    <i class="material-icons">mode_edit</i>
+                  <button [class.hidden]="bill.status === 'paid'" class="btn btn-info">
+                    <div class="btn-small-text">Set to </div> Paid<i class="material-icons pl-1">done_outline</i>
                   </button>
-                  <button class="btn btn-danger">
-                    <i class="material-icons">delete_forever</i>
+                  <button class="btn btn-danger">Storno
+                    <i class="material-icons pl-1">highlight_off</i>
                   </button>
                 </div>
               </td>
