--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -2,8 +2,8 @@
   <div class="card">
     <div class="card-header card-header-primary d-flex justify-content-between">
       <div>
-        <h3 class="card-title ">Customers</h3>
-        <p class="card-category">List of Customers</p>
+        <h3 class="card-title ">Bills</h3>
+        <p class="card-category">List of Bills</p>
       </div>
     </div>
     <div class="card-body">
