--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -2,7 +2,7 @@
   <div class="card-header card-header-primary d-flex justify-content-between">
     <div>
       <h3 class="card-title ">Orders</h3>
-      <p class="card-category"> List of orders</p>
+      <p class="card-category"> List of Orders</p>
     </div>
   </div>
 
@@ -10,7 +10,7 @@
 
       <div class="d-flex my-3 row">
 
-      <span class="my-auto span__filter col-12 col-md-5">Filter orders by...</span>
+      <span class="my-auto span__filter col-12 col-md-5">Filter Orders by...</span>
 
       <div class="col-12 col-md-3">
         <select [(ngModel)]="phraseKey" class="custom-select">
@@ -72,7 +72,7 @@
               <i *ngIf="columnKey === 'status' && direction === 'dsc'"
                 class="material-icons align-text-bottom">keyboard_arrow_up</i>
             </th>
-            <th class="text-center">Actions</th>
+            <th class="text-center"></th>
           </tr>
         </thead>
         <tbody>
