--- a/src/app/pages/order-list/order-list.component.scss
+++ b/src/app/pages/order-list/order-list.component.scss
@@ -15,3 +15,10 @@ table {
     background-color: rgb(154, 124, 223);
   }
 }
+
+.span__filter {
+  font-size: 1.25rem;
+  @media screen and (max-width: 900px) {
+    font-size: 1rem;
+  }
+}
