--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons");
+
+.span__filter{
+  font-size: 1.25rem;
+  @media screen and (max-width: 900px) {
+      font-size: 1rem;
+  }
+}
