--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -142,16 +142,11 @@
                 <td>{{ customer.active }}</td>
                 <td>
                   <div class="btn-group">
-                    <button class="btn btn-info px-3 mr-1" [routerLink]="[customer.id]">
-                      <i class="material-icons">
-                        mode_edit
-                      </i>
+                    <button class="btn btn-info" [routerLink]="[customer.id]">
+                      <i class="material-icons">mode_edit</i>
                     </button>
-                    <button (click)="onConfirmDelete(customer.id)" class="btn btn-danger px-3 ml-1">
-                      <!-- [routerLink]="['/customers']" -->
-                      <i class="material-icons">
-                        delete_forever
-                      </i>
+                    <button class="btn btn-danger pull-right" (click)="onConfirmDelete(customer.id)">
+                      <i class="material-icons">delete_forever</i>
                     </button>
                   </div>
                 </td>
