Bill, Order List Head fixes

--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="card-body">
     <div class="d-flex my-3 row">
-      <span class="my-auto span__filter col-12 col-md-5 pb-3 pb-md-0">Filter Orders by...</span>
+      <span class="span__filter col-12 col-md-5 pb-3 pb-md-0 mt-0 mb-3 pt-2">Filter Orders by...</span>
       <div class="col-12 col-md-3">
         <select [(ngModel)]="phraseKey" class="custom-select">
           <option *ngFor="let key of keyArray" [value]="key">
