--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -8,8 +8,8 @@
     </div>
     <div class="card-body">
       <div class="d-flex my-3 row">
-        <span class="span__filter col-12 col-md-5 pb-3 pb-md-0 mt-2">Filter Bills by...</span>
-        <div class="col-12 col-md-3 input-group mb-3">
+        <span class="span__filter col-12 col-md-5 pb-3 pb-md-0 mt-0 mb-3 pt-2">Filter Bills by...</span>
+        <div class="col-12 col-md-3 input-group mt-auto mb-3">
           <select [(ngModel)]="filterKey" class="custom-select" (change)="onFilterKeyChange()">
             <option *ngFor="let key of filterKeys" [value]="key">
               {{ key.charAt(0).toUpperCase() + key.slice(1) }}
