--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -29,11 +29,8 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-success w-100 py-6 my-3" [routerLink]="'0'">
-          Add new Customer
-          <i class="material-icons px-3">
-            person_add
-          </i>
+        <button class="btn btn-success w-100" [routerLink]="'0'">Add new Customer
+          <i class="material-icons align-text-center pl-3">person_add</i>
         </button>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
