--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -22,42 +22,42 @@
         </button>
       </div>
     </div>
-    <button type="button" class="btn btn-success btn-block py-6 mt-3">
-      Add new Order<i class="material-icons ml-2">post_add</i>
+    <button class="btn btn-success w-100" [routerLink]="'0'">Add new Order
+      <i class="material-icons align-text-center pl-3">post_add</i>
     </button>
     <div class="table-responsive">
-      <table class="table">
-        <thead class="thead-dark text-default text-center">
+      <table class="table table-striped table-sm table-order">
+        <thead class="thead-dark text-center">
           <tr>
-            <th class="text-center" (click)="onColumnSelect('id')">Id
+            <th class="text-center" (click)="onColumnSelect('id')" class="table-order__th--id">Id
               <i *ngIf="columnKey !== 'id'" class="material-icons align-text-bottom">indeterminate_check_box</i>
               <i *ngIf="columnKey === 'id' && direction === 'asc'"
                 class="material-icons align-text-top">keyboard_arrow_down</i>
               <i *ngIf="columnKey === 'id' && direction === 'dsc'"
                 class="material-icons align-text-bottom">keyboard_arrow_up</i>
             </th>
-            <th class="text-center" (click)="onColumnSelect('customerID')">Customer Id
+            <th class="text-center" (click)="onColumnSelect('customerID')" class="table-order__th--customerId">Customer Id
               <i *ngIf="columnKey !== 'customerID'" class="material-icons align-text-bottom">indeterminate_check_box</i>
               <i *ngIf="columnKey === 'customerID' && direction === 'asc'"
                 class="material-icons align-text-top">keyboard_arrow_down</i>
               <i *ngIf="columnKey === 'customerID' && direction === 'dsc'"
                 class="material-icons align-text-bottom">keyboard_arrow_up</i>
             </th>
-            <th class="text-center" (click)="onColumnSelect('productID')">Product Id
+            <th class="text-center" (click)="onColumnSelect('productID')" class="table-order__th--productId">Product Id
               <i *ngIf="columnKey !== 'productID'" class="material-icons align-text-bottom">indeterminate_check_box</i>
               <i *ngIf="columnKey === 'productID' && direction === 'asc'"
                 class="material-icons align-text-top">keyboard_arrow_down</i>
               <i *ngIf="columnKey === 'productID' && direction === 'dsc'"
                 class="material-icons align-text-bottom">keyboard_arrow_up</i>
             </th>
-            <th class="text-center" (click)="onColumnSelect('amount')">Amount
+            <th class="text-center" (click)="onColumnSelect('amount')" class="table-order__th--amount">Amount
               <i *ngIf="columnKey !== 'amount'" class="material-icons align-text-bottom">indeterminate_check_box</i>
               <i *ngIf="columnKey === 'amount' && direction === 'asc'"
                 class="material-icons align-text-top">keyboard_arrow_down</i>
               <i *ngIf="columnKey === 'amount' && direction === 'dsc'"
                 class="material-icons align-text-bottom">keyboard_arrow_up</i>
             </th>
-            <th class="text-center" (click)="onColumnSelect('status')">Status
+            <th class="text-center" (click)="onColumnSelect('status')" class="table-order__th--status">Status
               <i *ngIf="columnKey !== 'status'" class="material-icons align-text-bottom">indeterminate_check_box</i>
               <i *ngIf="columnKey === 'status' && direction === 'asc'"
                 class="material-icons align-text-top">keyboard_arrow_down</i>
