customer-edit-active-check

--- a/src/app/pages/customer-edit/customer-edit.component.scss
+++ b/src/app/pages/customer-edit/customer-edit.component.scss
@@ -1,4 +1,4 @@
-.h4__address {
+.h4__label {
   font-weight: 400;
 }
 
@@ -9,3 +9,8 @@
 .success {
   color: green;
 }
+
+.btn-block:disabled{
+  box-shadow: none;
+  cursor: not-allowed;
+} 
