--- a/src/app/pages/customer-edit/customer-edit.component.html
+++ b/src/app/pages/customer-edit/customer-edit.component.html
@@ -47,7 +47,7 @@
             </div>
           </div>
 
-          <h4 class="mt-4 py-1 h4__address">Address:</h4>
+          <h4 class="mt-4 py-1 h4__label">Address:</h4>
 
           <div class="row my-3">
             <div class="col-md-3 my-md-0 my-2">
@@ -109,9 +109,18 @@
           </div>
 
           <div class="row my-4">
-            <div class="col-md-12">
-              <label for="">Active</label>
-              <input name="active" type="text" [(ngModel)]="customer.active" class="form-control" required>
+            <div class="col-12">
+              <h4 class="h4__label">Customer status</h4>
+              <div class="col-6" *ngIf="customer.active === true">
+                <input name="active" type="checkbox" [(ngModel)]="customer.active" class="mx-2" required>
+                <label class="status" for=""><strong>Active</strong> Customer</label>
+
+              </div>
+              <div class="col-6" *ngIf="customer.active === false">
+                <input *ngIf="customer.active === false" name="inactive" type="checkbox" [(ngModel)]="customer.active"
+                  class="mx-2" required>
+                <label class="status" for=""><strong>Inactive</strong> Customer</label>
+              </div>
             </div>
           </div>
           <button class="btn btn-block btn-primary" [disabled]="eventForm.invalid" type="submit">
