--- a/src/app/pages/order-edit/order-edit.component.html
+++ b/src/app/pages/order-edit/order-edit.component.html
@@ -1,5 +1,6 @@
 <div class="row">
-  <div class="col-xl-6 col-lg-8 col-md-10 col-sm-10 mx-auto">
+  <div *ngIf="(order$ | async) as order" (ngSubmit)="onUpdate(orderForm, order)"
+    class="col-xl-6 col-lg-8 col-md-10 col-sm-10 mx-auto">
     <div class="card">
       <div class="card-header card-header-primary d-flex justify-content-between">
         <div>
@@ -7,33 +8,53 @@
         </div>
       </div>
       <div class="card-body">
-        <form class="py-3 px-5">
+        <form #orderForm="ngForm" class="py-3 px-5">
           <div class="mt-3">
             <label for="">OrderID</label>
-            <input name="orderID" type="text" class="form-control">
+            <input name="orderID" [(ngModel)]="order.id" type="text" class="form-control" disabled>
           </div>
           <div class="mt-4">
             <label for="">CustomerID</label>
-            <input name="customerID" type="text" class="form-control">
+            <input name="customerID" [(ngModel)]="order.customerID" type="text" class="form-control" pattern="^[1-9]{1}[0-9]{0,2}$" required>
+            <div [style.opacity]="orderForm.controls.customerID?.value  || 
+                !orderForm.controls.customerID?.touched ? '0' : '1' || orderForm.controls.customerID?.valid" [style.visibility]="orderForm.controls.customerID?.value || 
+                !orderForm.controls.customerID?.touched ? 'hidden' : 'visible' || orderForm.controls.customerID?.valid" class="error-message">
+              Please add a customer id.
+            </div>         
           </div>
           <div class="mt-4">
             <label for="">ProductID</label>
-            <input name="productID" type="text" class="form-control">
+            <input name="productID" [(ngModel)]="order.productID" type="text" class="form-control" pattern="^[1-9]{1}[0-9]{0,2}$" required>
+            <div [style.opacity]="orderForm.controls.productID?.value  || 
+                !orderForm.controls.productID?.touched ? '0' : '1'" [style.visibility]="orderForm.controls.productID?.value || 
+                !orderForm.controls.productID?.touched ? 'hidden' : 'visible'" class="error-message">
+              Please add a product id.
+            </div>
           </div>
           <div class="mt-4">
             <label for="">Amount</label>
-            <input name="amount" type="text" class="form-control">
+            <input name="amount" [(ngModel)]="order.amount" type="text" class="form-control" required>
+            <div [style.opacity]="orderForm.controls.productID?.value  || 
+                !orderForm.controls.productID?.touched ? '0' : '1'" [style.visibility]="orderForm.controls.productID?.value || 
+                !orderForm.controls.productID?.touched ? 'hidden' : 'visible'" class="error-message">
+              Amount is required.
+            </div>
           </div>
           <div class="mt-4">
-            <label for="statusSelect">Status</label>
-            <select class="custom-select" data-style="btn btn-link" id="statusSelect">
-              <option>new</option>
-              <option>paid</option>
-              <option>shipped</option>
+            <label for="orderStatus">Status</label>
+            <select class="form-control" data-style="btn btn-link" id="orderStatus" name="orderStatus"
+              [(ngModel)]="order.status" required>
+              <option [ngValue]="undefined">Select status...</option>
+              <option *ngFor="let status of orderStatus | keyvalue" [ngValue]="status.value">{{status.value}}</option>
             </select>
+            <div [style.opacity]="orderForm.controls.orderStatus?.value  || 
+                !orderForm.controls.orderStatus?.touched ? '0' : '1'" [style.visibility]="orderForm.controls.orderStatus?.value || 
+                !orderForm.controls.orderStatus?.touched ? 'hidden' : 'visible'" class="error-message">
+              Please select Status from the list.
+            </div>
           </div>
           <div class="mt-5">
-              <button class="btn btn-info w-100">Save</button>
+            <button [disabled]="orderForm.invalid" class="btn btn-info w-100">Save</button>
           </div>
         </form>
       </div>
