--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -8,18 +8,28 @@
   <div class="card-body">
     <div class="d-flex my-3 row">
       <span class="span__filter col-12 col-md-5 pb-3 pb-md-0 mt-0 mb-3 pt-2">Filter Orders by...</span>
-      <div class="col-12 col-md-3">
-        <select [(ngModel)]="phraseKey" class="custom-select">
+      <div class="col-12 col-md-3 input-group mt-auto mb-3">
+        <select [(ngModel)]="phraseKey" class="custom-select" (change)="onFilterKeyChange()">
           <option *ngFor="let key of keyArray" [value]="key">
             {{ key.charAt(0).toUpperCase() + key.slice(1) }}
           </option>
         </select>
+        <div *ngIf="phraseKey === 'amount'" class="input-group-append bg-primary">
+          <label class="input-group-text text-white" for="">&lt;=</label>
+        </div>
       </div>
-      <div class="input-group-prepend col-12 col-md-4">
+      <div *ngIf="phraseKey !== 'status'" class="input-group-prepend col-12 col-md-4">
         <input [(ngModel)]="txt" class="form-control" type="text" placeholder="Search...">
         <button type="submit" class="btn btn-white btn-round btn-just-icon">
           <i class="material-icons">search</i>
         </button>
+      </div>
+      <div *ngIf="phraseKey === 'status'" class="input-group-prepend col-12 col-md-4">
+        <select [(ngModel)]="txt" class="custom-select" id="">
+          <option>new</option>
+          <option>shipped</option>
+          <option>paid</option>
+        </select>
       </div>
     </div>
     <button class="btn btn-success w-100" [routerLink]="'0'">Add new Order
@@ -68,7 +78,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let order of orderList | async | orderFilter:txt:phraseKey | sorter:direction:columnKey">
+          <tr *ngFor="let order of orderList | async | orderFilter:phraseKey:txt | sorter:direction:columnKey">
             <td class="text-center">{{ order.id }}</td>
             <td class="text-center">{{ order.customerID }}</td>
             <td class="text-center">{{ order.productID }}</td>
