order edit getting datas

--- a/src/app/pages/order-edit/order-edit.component.scss
+++ b/src/app/pages/order-edit/order-edit.component.scss
@@ -2,3 +2,8 @@
     color: rgb(226, 62, 62);
     transition: all 1 ease;
 }
+
+.btn-block:disabled{
+    box-shadow: none;
+    cursor: not-allowed;
+  } 
