--- a/src/app/pages/order-edit/order-edit.component.html
+++ b/src/app/pages/order-edit/order-edit.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngIf="(order$ | async) as order" (ngSubmit)="onUpdate(orderForm, order)"
+  <div *ngIf="(order$ | async) as order"
     class="col-xl-6 col-lg-8 col-md-10 col-sm-10 mx-auto">
     <div class="card">
       <div class="card-header card-header-primary d-flex justify-content-between">
@@ -8,7 +8,7 @@
         </div>
       </div>
       <div class="card-body">
-        <form #orderForm="ngForm" class="py-3 px-5">
+        <form #orderForm="ngForm"  (ngSubmit)="onUpdate(orderForm, order)" class="py-3 px-5">
           <div class="mt-3">
             <label for="">OrderID</label>
             <input name="orderID" [(ngModel)]="order.id" type="text" class="form-control" disabled>
@@ -16,27 +16,21 @@
           <div class="mt-4">
             <label for="">CustomerID</label>
             <input name="customerID" [(ngModel)]="order.customerID" type="text" class="form-control" pattern="^[1-9]{1}[0-9]{0,2}$" required>
-            <div [style.opacity]="orderForm.controls.customerID?.value  || 
-                !orderForm.controls.customerID?.touched ? '0' : '1' || orderForm.controls.customerID?.valid" [style.visibility]="orderForm.controls.customerID?.value || 
-                !orderForm.controls.customerID?.touched ? 'hidden' : 'visible' || orderForm.controls.customerID?.valid" class="error-message">
-              Please add a customer id.
-            </div>         
+            <div [hidden]="orderForm.controls.customerID?.valid" class="error-message">
+              Please add a customerID.
+            </div>
           </div>
           <div class="mt-4">
             <label for="">ProductID</label>
             <input name="productID" [(ngModel)]="order.productID" type="text" class="form-control" pattern="^[1-9]{1}[0-9]{0,2}$" required>
-            <div [style.opacity]="orderForm.controls.productID?.value  || 
-                !orderForm.controls.productID?.touched ? '0' : '1'" [style.visibility]="orderForm.controls.productID?.value || 
-                !orderForm.controls.productID?.touched ? 'hidden' : 'visible'" class="error-message">
-              Please add a product id.
+            <div [hidden]="orderForm.controls.productID?.valid" class="error-message">
+              Please add a productID.
             </div>
           </div>
           <div class="mt-4">
             <label for="">Amount</label>
             <input name="amount" [(ngModel)]="order.amount" type="text" class="form-control" required>
-            <div [style.opacity]="orderForm.controls.productID?.value  || 
-                !orderForm.controls.productID?.touched ? '0' : '1'" [style.visibility]="orderForm.controls.productID?.value || 
-                !orderForm.controls.productID?.touched ? 'hidden' : 'visible'" class="error-message">
+            <div [hidden]="orderForm.controls.amount?.valid" class="error-message">
               Amount is required.
             </div>
           </div>
@@ -54,7 +48,7 @@
             </div>
           </div>
           <div class="mt-5">
-            <button [disabled]="orderForm.invalid" class="btn btn-info w-100">Save</button>
+            <button class="btn btn-block btn-info" [disabled]="orderForm.invalid" type="submit">Save</button>
           </div>
         </form>
       </div>
